[package]
name = "mqtt-conformance"
version = "0.1.0"
edition = "2021"
description = "MQTT broker conformance testing tool"
authors = ["MQTT Conformance Team"]

[[bin]]
name = "mqtt-conformance"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rumqttc = "0.25"
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
colored = "3.0"
uuid = { version = "1.11", features = ["v4"] }
rand = "0.9"
futures = "0.3"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
